<resources>
    <string name="app_name">SilverLink</string>
    <string name="app_logo">Logo</string>
    <string name="splashscreen">Splashscreen</string>
    <string name="error_msg">Error message</string>

    <!-- LOGIN / SIGN UP -->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phone_no">Phone No.</string>
    <string name="prompt_pwd">Password</string>
    <string name="prompt_pwd2">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tv_forget_pwd">Forget Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_signup">Sign Up</string>
    <string name="invalid_login">Incorrect phone no. or password.</string>
    <string name="prompt_role">I am a caregiver.</string>

    <!-- HOME -->
    <string name="nav_friend">Friend</string>
    <string name="nav_group">Group</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_setting">Setting</string>

    <!-- FRIEND -->
    <string name="title_friend_list">Friend List</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="iv_profile_pic">Profile Picture</string>
    <string name="btn_add_friend">Add Friend</string>
    <string-array name="sort_by">
        <item>Alphabetical (A-Z)</item>
        <item>Recent Messages</item>
    </string-array>
    <string name="tv_not_found">Not Found</string>

    <!-- PROFILE -->
    <string name="tv_update_profile">Update Profile</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="btn_update_pw">Update Password</string>
    <string name="prompt_oldpwd">Old Password</string>
    <string name="prompt_newpwd">New Password</string>

    <!-- SETTING -->
    <string name="title_setting">Settings</string>
    <string name="tv_carer">Caregivers</string>
    <string name="btn_add_carer">Add Caregiver</string>
    <string name="action_logout">Logout</string>

    <!-- MESSAGE -->
    <string name="iv_msg">Message</string>
    <string name="tv_play">Play</string>
    <string name="tv_stop">Stop</string>
    <string name="ib_record">Record</string>

    <!-- GROUP -->
    <string name="iv_group_pic">Group Picture</string>
    <string name="iv_star">Star</string>
</resources>
