<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Sherry Lau Geok Teng on 17/2/2017 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lcnch.cz3002.ntu.silverlink.fragment.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_white"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/tv_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:textColor="@color/red"
        android:textSize="@dimen/sml_font_size"
        android:text="@string/error_msg"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_error_msg"
        android:layout_marginTop="@dimen/text_box_break"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/text_box_padding"
        android:background="@drawable/border_text_box"
        android:hint="@string/prompt_phone_no"
        android:inputType="phone"
        android:maxLength="8"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone_no"
        android:layout_marginTop="@dimen/text_box_break"
        android:padding="@dimen/text_box_padding"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_text_box"
        android:hint="@string/prompt_pwd"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="30dp"
        android:padding="@dimen/text_box_padding"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:textAllCaps="true"
        android:text="@string/btn_login"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sml_font_size"
        android:text="@string/tv_signup"/>

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sml_font_size"
        android:text="@string/tv_forget_pwd"/>

</RelativeLayout>