<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Sherry Lau Geok Teng on 28/2/2017 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/text_box_padding"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/text_box_padding"
        android:textSize="@dimen/xsml_font_size"/>

    <ImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_below="@id/tv_date"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/iv_profile_pic"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_toEndOf="@id/iv_profile_pic"
        android:textSize="@dimen/font_size"/>

    <ImageView
        android:id="@+id/iv_msg"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_below="@id/tv_date"
        android:layout_toStartOf="@+id/tv_play"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/iv_msg"/>

    <TextView
        android:id="@+id/tv_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/font_size"
        android:text="@string/tv_play"/>
</RelativeLayout>